5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_2426.log
== TEST (2019-04-03 06:49:44) 
-- CODE:
t=float(input("digite o tempo"))
v=float(input("digite a velocidade"))
l=(1/12)
distancia=(v/t)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
11.11111111111111
133.33333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:50:13) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(1/12)
distancia=(v/t)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
11.11111111111111
133.33333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:50:47) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(0.833)
distancia=(v/t)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
11.11111111111111
13.338668800853675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:51:22) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(0.833)
distancia=(t/v)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.10804321728691477
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:52:10) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(0.833)
distancia=(t/v*100)
qtdlitro=(l/distancia)
print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
0.09255555555555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:52:45) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v*100)
qtdlitro=(l/distancia)
print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
1.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:53:14) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v*100)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:53:43) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v*1000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:54:05) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:54:17) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 06:54:36) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.156926
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:54:45) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:55:05) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 06:55:28) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.195405
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:56:09) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:57:19) 
-- CODE:
t=int(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 06:58:53) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 06:59:11) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.134419
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:46:39) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/60)/v)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.0015
0.000125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:47:10) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t//v)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- ERROR:
File "XXXX", line 5
    qtdlitro=(distancia/l)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:47:21) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- ERROR:
File "XXXX", line 5
    qtdlitro=(distancia/l)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:47:49) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:48:49) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*1000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:49:19) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:49:32) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 07:50:21) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.213084
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:52:59) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v)
qtdlitro=((distancia/l)*1000)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:53:26) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v)
qtdlitro=((distancia/l)*10000)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:54:15) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*1000)
qtdlitro=((distancia/l)*10000)
print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
75000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:54:59) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=((distancia/l)*10)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:57:04) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/100)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:57:26) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/1000)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:57:49) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/10000)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:58:38) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/10000)
distancia=((t/v)*1000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
75000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:59:00) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/100)
distancia=((t/v)*1000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 07:59:32) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12/10)
distancia=((t/v)*10000)
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:00:14) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
qtdlitro=(distancia/l)
print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:02:31) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
r1=distancia*10000
qtdlitro=(r1/l)

print(r1)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:02:46) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
r1=distancia*10000
qtdlitro=(r1/l)

print(r1)
print(qtdlitro)


-- EXECUTION TIME:
0.199173
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:02:52) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
r1=distancia*10000
qtdlitro=(r1/l)

print(r1)
print(qtdlitro)


-- EXECUTION TIME:
0.177025
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
416.66666666666663
34.72222222222222
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
150.0
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:06:00) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/60))
velocidade=(distancia*1000)
qtdlitro=(distancia/l)

print(r1)
print(qtdlitro)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(r1)
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:06:31) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/60))
velocidade=(distancia*1000)
qtdlitro=(distancia/l)

print(distancia)
print(qtdlitro)


-- OUTPUT:
0.15
0.012499999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:08:12) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v))
qtdlitro=(distancia/l)

print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:10:18) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10)
qtdlitro=((distancia/l)*10)

print(distancia)
print(qtdlitro)


-- OUTPUT:
0.8999999999999999
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:10:47) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*100)
qtdlitro=((distancia/l)*100)

print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:11:06) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*100)
qtdlitro=((distancia/l)*100)

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.19021
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
9.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
4.166666666666666
34.722222222222214
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
1.5
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:11:11) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*100)
qtdlitro=((distancia/l)*100)

print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:11:25) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*100)
qtdlitro=((distancia/l)*100)

print(distancia)
print(qtdlitro)


-- OUTPUT:
9.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:11:40) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*1000)
qtdlitro=((distancia/l)*100)

print(distancia)
print(qtdlitro)


-- OUTPUT:
90.0
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:12:08) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=((distancia/l)*10)

print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:12:35) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=((t/v)*10000)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:15:19) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
velocidade=(distancia/t)
distancia=(t/v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade=(distancia/t)
NameError: name 'distancia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:16:05) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t/v)
velocidade=(distancia/t)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- OUTPUT:
0.09
0.0075
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:18:08) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:18:20) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:18:22) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:18:41) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.293091
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:18:50) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.18989
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:19:00) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.129709
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:19:53) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.188737
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:20:01) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.197994
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 07:45:20) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.173621
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 07:45:28) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.201595
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 07:45:36) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia
print(qtdlitro)


-- ERROR:
File "XXXX", line 8
    print(qtdlitro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 07:45:45) 
-- CODE:
t=float(input("digite o tempo: "))
v=float(input("digite a velocidade: "))
l=(12)
distancia=(t*v)
qtdlitro=((distancia/l))

print(distancia)
print(qtdlitro)


-- EXECUTION TIME:
0.176661
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
